Day 2 & 3 final content. Updated references.

--- a/_posts/2019-06-13-2019-06-15-pks-workshop-day-3.md
+++ b/_posts/2019-06-13-2019-06-15-pks-workshop-day-3.md
@@ -6,12 +6,121 @@ author: "@outofmem0ry"
 tags: [beginner, workshop, webapp, kubernetes, docker, pks]
 categories: beginner
 terms: 2
-summary: PKS upgrade and application deployment
+summary: Exploring Naomi's persona and application deployment
 ---
 ## What are we goinng to deploy? 🤔
 
 This workshop's website ☸️🐳📦🚢
 
+## Exploring Naomi's persona
+
+This article will help you in [understanding the personas of Alana, Cody and Naomi within Pivotal Container Service (PKS)](https://community.pivotal.io/s/article/understanding-the-personas-of-alana-cody-and-naomi-within-pivotal-container-service-pks).
+
+- **Operations performed by Alana or Cody**
+  
+  - Target PKS API
+
+    ```shell
+    uaac target pks-$LABNUM.$DOMAIN:8443 --ca-cert /var/tempest/workspaces/default/root_ca_certificate
+
+    Unknown key: Max-Age = 86400
+    Target: https://pks-$LABNUM.$DOMAIN:8443
+    ```
+
+  - Login as admin
+
+    ```shell
+    uaac token client get admin -s z1sVCS3FWgq54nrXthh50lg_MZjGXOEb
+
+    Unknown key: Max-Age = 86400
+    Successfully fetched token via client credentials grant.
+    Target: https://pks-$LABNUM.$DOMAIN:8443
+    Context: admin, from client admin
+    ```
+
+  - Add user Naomi to UAA internal database
+
+    ```shell
+    uaac user add naomi --emails naomi@example.com -p changeme
+    ```
+
+  - Create naomi role object. These permissions are too wide open. This can be adjusted accordingly by Alana based on the user requirements.
+
+    ```shell
+    apiVersion: rbac.authorization.k8s.io/v1
+    kind: Role
+    metadata:
+      namespace: default
+      name: naomi
+    rules:
+    - apiGroups: ["*"]
+      resources: ["*"]
+      verbs: ["*"]
+    ```
+  
+    ```shell
+    kubectl apply -f naomi-role.yml
+    role.rbac.authorization.k8s.io/naomi created
+
+    kubectl get roles
+    NAME    AGE
+    naomi   5s
+    ```
+
+  - Create RoleBindings for naomi
+
+    ```shell
+    kind: RoleBinding
+    apiVersion: rbac.authorization.k8s.io/v1
+    metadata:
+      name: naomirolebinding
+      namespace: default
+    subjects:
+    - kind: User
+      name: naomi
+      apiGroup: rbac.authorization.k8s.io
+    roleRef:
+      kind: Role
+      name: naomi
+      apiGroup: rbac.authorization.k8s.io
+    ```
+
+  - Apply rolebinding
+
+    ```shell
+    kubectl apply -f naomi-rb.yml
+    rolebinding.rbac.authorization.k8s.io/naomirolebinding created
+    ```
+
+- **How Naomi gets her `kubeconfig` ?** 🤔
+  - The below command will write Naomi's kubeconfig to a file named `naomi_kubeconfig` in the current directory
+
+    ```shell
+    #Use Naomi's password
+
+    KUBECONFIG=naomi_kubeconfig ./pks get-kubeconfig firstcluster -u naomi -a pks-$LABNUM.$DOMAIN --ca-cert /var/tempest/workspaces/default/root_ca_certificate
+    ```
+
+- Testing Naomi's access
+  - Try to deploy workload in kube-system namespace. Denied 🚫🚫🚫🚫. Remember we only gave her privileges to deploy in default namespace
+
+    ```shell
+    kubectl apply -f nginx.yaml -n kube-system --kubeconfig=naomi_kubeconfig
+  
+    Error from server (Forbidden): error when retrieving current configuration of:
+    Resource: "/v1, Resource=pods", GroupVersionKind: "/v1, Kind=Pod"
+    Name: "nginx", Namespace: "kube-system"
+    Object: &{map["metadata":map["labels":map["name":"nginx"] "name":"nginx"     "namespace":"kube-system" "annotations":map["kubectl.kubernetes.io/  last-applied-configuration":""]  ] "spec":map["containers":[map["image":"nginx" "name":"nginx"   "ports":[map["containerPort":'P']]]]  ] "apiVersion":"v1" "kind":"Pod"]}
+    from server for: "nginx.yaml": pods "nginx" is forbidden: User "naomi" cannot get resource   "pods"   in API group "" in the namespace "kube-system"
+    ```
+
+  - Let's try the default namespace.
+
+    ```shell
+    kubectl apply -f nginx.yaml --kubeconfig=naomi_kubeconfig
+    pod/nginx created
+    ```
+  
 ## Deploying a containerized static github website
 
 We'll deploying the static website that is being used for this workshop. High level overview of what we are going to do
@@ -65,7 +174,7 @@ git clone https://github.com/outofmem0ry/outofmem0ry.github.io.git
 - Before deploying this application on our cluster let's try to deploy this application on our local machine.
 
   ```shell
-  docker run -d -p 4000:4000 --name $USERNAME -v "$PWD":/srv/jekyll $USERNAME/pks_workshop
+  docker run -d -p 4000:4000 --name $USERNAME $USERNAME/pks_workshop
   ```
 
 - Browse the app at `localhost:4000`
