Change docker build instructions

--- a/_posts/2019-06-13-2019-06-15-pks-workshop-day-1.md
+++ b/_posts/2019-06-13-2019-06-15-pks-workshop-day-1.md
@@ -8,7 +8,7 @@ categories: beginner
 terms: 2
 summary: PKS Installation, login and cluster creation
 ---
-# PKS Installation 🛫🛫🛫
+## PKS Installation 🛫🛫🛫
 
 Day 1 will cover PKS v1.3.6 tile installation on vsphere environment. The workshop does not cover NSX-T based installs.
 
