--- a/_posts/2019-06-13-2019-06-15-pks-workshop-day-3.md
+++ b/_posts/2019-06-13-2019-06-15-pks-workshop-day-3.md
@@ -151,7 +151,7 @@ git clone https://github.com/outofmem0ry/outofmem0ry.github.io.git
 - In the first terminal, set an environment variable for your [Docker Hub](https://hub.docker.com) user name. It can be the same [Docker Hub](https://hub.docker.com) user name that you used to log in to the terminals on this site.
 
   ```shell
-  export USERNAME=YourUserName
+  export DOCKER_USER=<docker hub username>
   ```
 
 - Make sure you're still in the `outofmem0ry.github.io` directory.
@@ -160,11 +160,11 @@ git clone https://github.com/outofmem0ry/outofmem0ry.github.io.git
   pwd
   ```
 
-- Login to your docker hub account using `docker login` 
+- Login to your docker hub account using `docker login`
 - Build and tag the docker image
   
   ```shell
-  docker build . -t $USERNAME/pks_workshop
+  docker build . -t $DOCKER_USER/pks_workshop
   ```
 
 - The image should be present locally now. You can check using `docker images`
@@ -174,7 +174,7 @@ git clone https://github.com/outofmem0ry/outofmem0ry.github.io.git
 - Before deploying this application on our cluster let's try to deploy this application on our local machine.
 
   ```shell
-  docker run -d -p 4000:4000 --name $USERNAME $USERNAME/pks_workshop
+  docker run -d -p 4000:4000 --name $DOCKER_USER $DOCKER_USER/pks_workshop
   ```
 
 - Browse the app at `localhost:4000`
@@ -182,19 +182,19 @@ git clone https://github.com/outofmem0ry/outofmem0ry.github.io.git
 ### Step 4: Push the image to docker hub
 
 ```shell
-docker push $USERNAME/pks_workshop
+docker push $DOCKER_USER/pks_workshop
 ```
 
 ### Step 5: Deploy the app to the cluster
 
 ```shell
-kubectl run $USERNAME --image=$USERNAME/pks_workshop
+kubectl run $DOCKER_USER --image=$DOCKER_USER/pks_workshop
 ```
 
 ### Step 6: Expose your deployment
 
 ```shell
-kubectl expose deployment $USERNAME \
+kubectl expose deployment $DOCKER_USER \
 --type=NodePort \
 --port=4000 \
 --target-port=4000
@@ -205,7 +205,7 @@ kubectl expose deployment $USERNAME \
 - After the deployment is exposed it creates a service. You can view this service using
   
   ```shell
-  kubectl describe svc $USERNAME
+  kubectl describe svc $DOCKER_USER
   ```
 
 - The web app can be accessed using a combination of your worker node IPs and node port from the `kubectl describe` output
