Added instructions to use bosh cli

--- a/_posts/2019-06-13-2019-06-15-pks-workshop-day-1.md
+++ b/_posts/2019-06-13-2019-06-15-pks-workshop-day-1.md
@@ -92,6 +92,12 @@ Day 1 will cover PKS v1.3.6 tile installation on vsphere environment. The worksh
 
 ## Step 5: Monitor Cluster creation
 
+- Setup environment to use bosh cli on Opsmgr
+
+  ```shell
+  source /home/ubuntu/env.sh
+  ```
+
 - Monitor via bosh
 
   ```shell
