Add details of env file

--- a/_posts/2019-06-13-2019-06-15-pks-workshop-day-1.md
+++ b/_posts/2019-06-13-2019-06-15-pks-workshop-day-1.md
@@ -97,6 +97,13 @@ Day 1 will cover PKS v1.3.6 tile installation on vsphere environment. The worksh
   ```shell
   source /home/ubuntu/env.sh
   ```
+  
+  - Content of env.sh are taken from `Bosh Director tile -> Credentials -> Bosh Commandline Credentials`
+    
+    ```shell
+    cat env.sh
+    export BOSH_CLIENT=ops_manager BOSH_CLIENT_SECRET=StVtUaBi-xxxx BOSH_CA_CERT=/var/tempest/workspaces/default/root_ca_certificate BOSH_ENVIRONMENT=10.aaa.bb.cc
+    ```
 
 - Monitor via bosh
 
