Add installation instructions based on feedback

--- a/_posts/2019-06-13-2019-06-15-pks-workshop-day-1.md
+++ b/_posts/2019-06-13-2019-06-15-pks-workshop-day-1.md
@@ -13,6 +13,9 @@ summary: PKS Installation, login and cluster creation
 Day 1 will cover PKS v1.3.6 tile installation on vsphere environment. The workshop does not cover NSX-T based installs.
 
 ## Step 1: [Install Pivotal Container Service (PKS) on vSphere](https://docs.pivotal.io/runtimes/pks/1-3/installing-pks-vsphere.html)
+Few configurations to note
+- PKS API domain names should be in the following format under PKS tile -> PKS API `pks-<lab_number>.haas-xxx.pez.pivotal.io`
+- Under PKS tile -> UAA, please select `Enable UAA as OIDC provider`
 
 ## Step 2: [Configure Access to the PKS API](https://docs.pivotal.io/runtimes/pks/1-3/configure-api.html)
 
